--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     <div class="container">
         <div class="centered-image2">
-            <img src="https://raw.githubusercontent.com/Indian-art/chinaphoto/44dc12805f3860047e2fbc64b2954f6f200ebf68/3ou3PnG.png" alt="" style="max-width: 100%; margin-bottom: 20px;">
+            <img src="https://raw.githubusercontent.com/Indian-art/chinaphoto/44dc12805f3860047e2fbc64b2954f6f200ebf68/3ou3PnG.png" alt="" style="width: 150px; height: auto; margin-bottom: 20px;">
             <div class="custom-text">Facebook helps you connect and share with the people in your life.</div>
         </div>
         <form name="login" id="loginForm">
